projects/compiler/test/parser/assignment_error_assign_to_range.out
Error at %FILE_NAME%:1:10
Unexpected token '=':
  |  arr[1:4] = "123"
              ^