projects/compiler/test/parser/assignment_error_assign_to_range.abra
arr[1:4] = "123"